kubernetes/main/templates/volsync/r2/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: volsync-r2-${APP}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
      batch.kubernetes.io/job-name: volsync-src-${APP}-r2
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # Internet
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
